--- a/ChoreBuddies.Frontend/Features/Chores/ChoreDetailsPage.razor
+++ b/ChoreBuddies.Frontend/Features/Chores/ChoreDetailsPage.razor
@@ -18,6 +18,7 @@
 @inject ISnackbar Snackbar
 @inject IDialogService DialogService
 @inject IChoresService choresService
+@inject IJSRuntime JS
 @inject IScheduledChoresService scheduledChoreService
 @inject User.IUserService userService
 
@@ -106,7 +107,7 @@
 			}
 		}
 		Snackbar.Add("Saved successfully!", Severity.Success);
-		CurrentMode = PageMode.View;
+		await JS.InvokeVoidAsync("history.back");
 	}
 
 	private async Task OpenPredefinedChoreDialog()
