forceLoad create chore page after pressing create chore button

--- a/ChoreBuddies.Frontend/UI/Layout/MainLayout.razor
+++ b/ChoreBuddies.Frontend/UI/Layout/MainLayout.razor
@@ -240,7 +240,7 @@
 
     private void AddNewChore()
     {
-        Navigation.NavigateTo("/chores/new");
+        Navigation.NavigateTo("/chores/new", forceLoad: true);
     }
 
     private void ViewAllChores()
