--- a/ChoreBuddies.Frontend/Features/Authentication/SignUp.razor
+++ b/ChoreBuddies.Frontend/Features/Authentication/SignUp.razor
@@ -74,7 +74,7 @@
 
                 <MudItem xs="12" Class="d-flex align-center justify-space-between mt-2">
                     <MudCheckBox Color="Color.Primary" T="bool" Required="true" RequiredError="You must agree" Label="I agree!" />
-                    <MudButton Disabled="@(!success)" Variant="Variant.Filled" Color="Color.Primary" OnClick="@SignUpAction" Class="ml-auto px-6">Sign up</MudButton>
+                    <MudButton Disabled="@(!success)" Variant="Variant.Filled" Color="Color.Primary" OnClick="@SignUpAction" Class="ml-auto px-6" Style="text-transform: none;">Sign Up</MudButton>
                 </MudItem>
 
             </MudGrid>
