--- a/ChoreBuddies.Frontend/Features/Household/HouseholdSetupPage.razor
+++ b/ChoreBuddies.Frontend/Features/Household/HouseholdSetupPage.razor
@@ -19,6 +19,7 @@
             <MudButton Variant="Variant.Filled"
                        Color="Color.Primary"
                        Size="Size.Large"
+                       Style="text-transform: none;"
                        OnClick="@CreateHousehold">
                 Create Household
             </MudButton>
@@ -26,6 +27,7 @@
             <MudButton Variant="Variant.Outlined"
                        Color="Color.Primary"
                        Size="Size.Large"
+                       Style="text-transform: none;"
                        OnClick="@JoinHousehold">
                 Join Household
             </MudButton>
