--- a/ChoreBuddies.Frontend/Features/Household/JoinHouseholdPage.razor
+++ b/ChoreBuddies.Frontend/Features/Household/JoinHouseholdPage.razor
@@ -35,6 +35,7 @@
                        Color="Color.Primary"
                        Size="Size.Large"
                        Disabled="@(!CanJoin)"
+                       Style="text-transform: none;"
                        OnClick="@Join">
                 Join
             </MudButton>
