--- a/ChoreBuddies.Frontend/Features/Rewards/RewardDetails.razor
+++ b/ChoreBuddies.Frontend/Features/Rewards/RewardDetails.razor
@@ -28,8 +28,9 @@
                    Color="Color.Primary"
                    StartIcon="@Icons.Material.Filled.ContentCopy"
                    OnClick="OpenPredefinedRewardDialog"
-                   Class="mb-4">
-            Select from predefined
+                   Class="mb-4"
+                   Style="text-transform: none;">
+            Select From Predefined
         </MudButton>
     }
 
