--- a/ChoreBuddies.Frontend/Features/Chores/ChoreForm.razor
+++ b/ChoreBuddies.Frontend/Features/Chores/ChoreForm.razor
@@ -60,10 +60,10 @@
 			}
 			else
 			{
-				<MudButton OnClick="OnSaveInternal" Color="Color.Primary" Variant="Variant.Filled">Save</MudButton>
+				<MudButton OnClick="OnSaveInternal" Color="Color.Primary" Variant="Variant.Filled" Style="text-transform: none;">Save</MudButton>
 				@if (PageMode == PageMode.Edit)
 				{
-					<MudButton OnClick="() => PageMode = PageMode.View" Color="Color.Error" Variant="Variant.Outlined">Cancel</MudButton>
+					<MudButton OnClick="() => PageMode = PageMode.View" Color="Color.Error" Variant="Variant.Outlined" Style="text-transform: none;">Cancel</MudButton>
 				}
 			}
 		</div>
