--- a/ChoreBuddies.Frontend/Features/Rewards/RewardShop.razor
+++ b/ChoreBuddies.Frontend/Features/Rewards/RewardShop.razor
@@ -29,7 +29,7 @@
         Size="Size.Large"
         Color="Color.Primary"
         Style="text-transform:none; border-radius:20px;">
-            Add new reward
+            Add New Reward
         </MudButton>
     </MudStack>
 
