--- a/ChoreBuddies.Frontend/Features/Household/HouseholdMembersManagement.razor
+++ b/ChoreBuddies.Frontend/Features/Household/HouseholdMembersManagement.razor
@@ -100,7 +100,7 @@
     // ==== STATES ====
     private bool _isEditingChores = false;
     private int _userId = -1;
-    private bool _currentUserIsChild = false;
+    private bool _currentUserIsChild = true;
 
     protected override async Task OnParametersSetAsync()
     {
