Change names + add missing button

--- a/ChoreBuddies.Frontend/UI/Components/Chores/UpcomingChore.razor
+++ b/ChoreBuddies.Frontend/UI/Components/Chores/UpcomingChore.razor
@@ -16,7 +16,7 @@
 			<MudText Typo="Typo.body2">@GetDescription()</MudText>
 
 			<MudButton Variant="Variant.Filled" Color="Color.Primary" Class="mt-2" OnClick="ViewChoreDetails">
-				View Task →
+				View Chore →
 			</MudButton>
 		</MudItem>
 
